# White-box-Cartoonization

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
test_code/: __main__.py  cartoonize.py  guided_filter.py
virtualization/: Dockerfile  README.md  whiteboxcartoon.yml
